--- a/.github/workflows/node-deploy.yml
+++ b/.github/workflows/node-deploy.yml
@@ -26,7 +26,7 @@ jobs:
           SOURCE: "deploy/"
           REMOTE_HOST: "project2.eaglesoftwareteam.com"
           REMOTE_USER: ubuntu
-          TARGET: "nodeapps/2024/project2/t{number}"
+          TARGET: "nodeapps/2024/project2/t7"
       - name: Execute SSH commmands on remote server
         uses: JimCronqvist/action-ssh@master
         env:
@@ -38,7 +38,7 @@ jobs:
           command: |
             cd nodeapps/2024/project2/t7
             npm install
-            sudo systemctl stop course-backend-t{number}
-            sudo cp course-backend.service /lib/systemd/system/course-backend-t{number}.service
+            sudo systemctl stop course-backend-t7
+            sudo cp course-backend.service /lib/systemd/system/course-backend-t7.service
             sudo systemctl daemon-reload
-            sudo systemctl start course-backend-t{number}
+            sudo systemctl start course-backend-t7
