--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "bundle": "mkdir deploy && cp -r app server.js package.json package-lock.json tutorial-backend-simple.service .env deploy"
+    "bundle": "mkdir deploy && cp -r app server.js package.json package-lock.json course-t7-backend.service .env deploy"
   },
 
   "keywords": [
