--- a/.github/workflows/node-deploy.yml
+++ b/.github/workflows/node-deploy.yml
@@ -44,7 +44,7 @@ jobs:
           SOURCE: "deploy/"
           REMOTE_HOST: "project1.eaglesoftwareteam.com"
           REMOTE_USER: ubuntu
-          TARGET: "nodeapps/seiv2025/p2/t7"
+          TARGET: "nodeapps/2025/project2/t7"
       - name: Execute SSH commmands on remote server
         uses: JimCronqvist/action-ssh@master
         env:
