--- a/course-t7-backend.service
+++ b/course-t7-backend.service
@@ -6,7 +6,7 @@ After=network.target
 Type=simple
 User=ubuntu
 WorkingDirectory=/home/ubuntu/nodeapps/2025/project2/t7
-ExecStart=/usr/bin/npm run start
+ExecStart=npm run start
 Restart=on-failure
  
 [Install]
